<resources>
    <string name="app_name">手机C盾卫士</string>
    <!--设置手机防盗密码-->
    <string name="activity_setpw_title">设置手机防盗密码</string>
    <string name="activity_setpw_tip">请先设置手机防盗密码</string>
    <string name="activity_setpw_hint1">请设置6–12位字符密码</string>
    <string name="activity_setpw_hint2">请再次输入密码</string>
    <!--进入手机防盗-->
    <string name="activity_editpw_title">进入手机防盗</string>
    <string name="activity_editpw_tip">请先输入手机防盗密码</string>
    <string name="activity_editpw_hint">请输入6–12位字符密码</string>
    <!--手机防盗-->
    <string name="activity_burglar_tip">若手机丢失,\n请通过其他设备进行远程控制</string>
    <string name="activity_burglar_setting">设置</string>
    <string name="activity_burglar_lock">换卡自动锁机</string>
    <string name="activity_burglar_contact">换卡通知紧急联系人</string>
    <string name="activity_burglar_defend">防卸载保护</string>
    <string name="activity_burglar_revise">修改密码</string>
    <string name="activity_burglar_off">关闭手机防盗</string>
    <!--软件管理-->
    <string name="activity_app_phone_memory">剩余手机内存:</string>
    <string name="activity_app_card_memory">剩余SD卡内存:</string>
    <string name="activity_app_version">版本号</string>
    <!--手机杀毒-->
    <string name="activity_ant_start">开始扫描</string>
    <string name="activity_ant_stop">停止扫描</string>
    <string name="activity_ant_safe">\u2714</string>
    <string name="activity_ant_danger">\u2716</string>
    <string name="activity_ant_scan_init">初始化杀毒引擎中…</string>
    <string name="activity_ant_scanning">正在扫描：</string>
    <string name="activity_ant_scan_finish">扫描完成！</string>
    <string name="activity_ant_scan_nofinish">查杀未完成！</string>
    <string name="activity_ant_never">您还未扫描过哟!</string>
    <string name="activity_ant_last">上次查杀时间：</string>
    <!--清理缓存-->
    <string name="activity_cache_suggest">垃圾</string>
    <string name="activity_cache_clear">一键清理</string>
    <string name="activity_cache_finish">清理完成</string>
    <!--进程管理-->
    <string name="activity_process_user">用户进程</string>
    <string name="activity_process_system">系统进程</string>
    <string name="activity_process_speedup">一键加速</string>
    <string name="activity_process_all">总进程数</string>
    <string name="activity_process_already">已用</string>



</resources>
