<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--自定义标题栏-->
    <include layout="@layout/public_toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/activity_setpw_tip"
        android:textColor="#000"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="9"
            android:background="@drawable/shape_bottom"
            android:ems="12"
            android:hint="@string/activity_setpw_hint1"
            android:inputType="textPassword"
            android:textColorHint="@color/hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="9"
            android:background="@drawable/shape_bottom"
            android:ems="12"
            android:hint="@string/activity_setpw_hint2"
            android:inputType="textPassword"
            android:textColorHint="@color/hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:id="@+id/btn_true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:background="@drawable/click_false"
            android:enabled="false"
            android:text="确定"
            android:textColor="#fff"
            android:onClick="check"/>
    </LinearLayout>

</LinearLayout>